kubernetes/apps/main/opentoucan/grafana/app/route.yaml
---
# yaml-language-server: $schema=https://kubernetes.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-opentoucan
spec:
  hostnames: ["opentoucan-dashboard.${DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: grafana-opentoucan-service
          namespace: opentoucan
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
